--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,27 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
-.title {
+.title, .content, .button-container {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 8px;
 }
 
-.content {
-  background: #e3f4ff;
+.title, .content {
+  margin-bottom: 8px;
 }
 
 .button-container {
-  background: #e3f4ff;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
+  padding: 8px 16px;
 }
