--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,28 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+
+/* solution */
+
+.title {
+  text-align: center;
+  margin: 32px 0;
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.container {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container .text {
+  text-align: center;
+}
