--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -39,7 +39,7 @@ body {
   background: #eee;
   border-radius: 50%;
   color: #888;
-  font-weight: 400;
+  font-weight: 800;
   font-size: 16px;
   height: 24px;
   width: 24px;
@@ -66,4 +66,32 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+
+/* Solution */
+
+.modal {
+  padding: 16px;
+  display: flex;
+  gap: 16px;
+}
+
+.modal .icon, .modal .close-button {
+  flex-shrink: 0;
+}
+
+.content > .top {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
+}
+
+.content .header {
+  font-size: 18px;
+  font-weight: 800;
+}
+
+.content > .bottom {
+  margin-top: 16px;
 }
